Migrating to graal.js (#146)
* Migrating to graal.js
Latest ECMAScript support.
Also, with module loading, should be very fast.

* Fixing tests.

* Adding JavaScript only project to benchmark graal.js.
This commit adds the project.

* Updated with tasks to ensure graal.js has compiler binaries and modules.

* Benchmarking is now done.

* Updated with latest version of 23.xxx graal.

* Updated with latest versions of all dependencies - other than spark-11.